--- a/src/components/homepge/footer/style.css
+++ b/src/components/homepge/footer/style.css
@@ -185,13 +185,30 @@ input {
 
 @media screen and (max-width:380px) {
     .main-footer-container {
-        padding: 0px 30px;
+        padding: 30px 30px;
+    }
+
+    .line {
+        padding: 4px 20px;
+        width: 99%;
+    }
+}
+
+@media screen and (max-width:400px) {
+    .line {
+        padding: 5px 20px;
+        width: 100%;
     }
 }
 
 @media screen and (max-width:440px) {
     .main-footer-container {
-        padding: 0px 30px;
+        padding: 30px 30px;
 
+    }
+}
+@media screen and (max-width: 400px) {
+    .coupon-outer-card {
+        padding: 43px 30px;
     }
 }
